# vid2aud

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
vid2aud/: __init__.py  main.py
vid2aud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
