[metadata]
name = vid2aud
version = attr: vid2aud.__version__
author = Yi-Jen Sun
author_email = elainesun442@gmail.com
url = https://github.com/yijensun/vid2aud
description = A python package to extract audio from a video
long_description = file: README.md
long_description_content_type = text/markdown
keywords = video, audio, convertion
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    ffmpeg-python>=0.2.0
    audioread>=2.1.9
    librosa>0.8.1
    natsort>=5.5.0
